# OFDM-Phy

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  ofdm_config.conf
include/: fft.h  ifft.h  libcfg.h  ofdm.h  qam.h
src/: fft.c  libcfg.c  main.c  qam.c
test/: CMakeLists.txt  test_qam.c
